--- a/templates/call-docker-build.yaml
+++ b/templates/call-docker-build.yaml
@@ -26,7 +26,7 @@ jobs:
 
     name: Call Docker Build
 
-    uses: gopuman/actions/.github/workflows/reusable-docker-build.yaml@main
+    uses: mostlydevops/actions/.github/workflows/reusable-docker-build.yaml@main
 
     permissions:
       contents: read
