--- a/templates/call-super-linter.yaml
+++ b/templates/call-super-linter.yaml
@@ -29,7 +29,7 @@ jobs:
     ### https://docs.github.com/en/actions/learn-github-actions/reusing-workflows
     ### you can also call workflows from inside the same repo via file path
 
-    uses: gopuman/actions/.github/workflows/reusable-super-linter.yaml@main
+    uses: mostlydevops/actions/.github/workflows/reusable-super-linter.yaml@main
 
     ### Optional settings examples
 
